feat: :zap: Se agregó el readme

--- a/test.ipynb
+++ b/test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "La Problemática: La demo debe hacer una sola cosa bien: el usuario toma una foto de una planta (ej. hiedra venenosa), se usa un LLM multimodal para identificarla y devuelve una advertencia de \"Peligro: Causa dermatitis\".\n",
+    "El usuario toma una foto de una planta (ej. hiedra venenosa), se usa un LLM multimodal para identificarla y devuelve una advertencia de \"Peligro: Causa dermatitis\".\n",
     "\n",
     "**¿A quiénes ayuda?**\n",
     "\n",
@@ -18,11 +18,11 @@
     "\n",
     "La API de Gemini (gestionada a través de Google AI Studio) es la elección por las siguientes razones:\n",
     "\n",
-    "Velocidad de Prototipado y Simplicidad:  Con Google AI Studio, pueden obtener una clave API en minutos y comenzar a hacer llamadas al modelo multimodal (como Gemini Pro Vision) de inmediato. No necesitan configurar un proyecto completo de Google Cloud, gestionar permisos de IAM (Identidad y Acceso) ni entender conceptos de MLOps. Vertex AI, por el contrario, es una plataforma completa que requiere configuración de proyecto, habilitación de APIs, y una curva de aprendizaje mayor, lo cual retrasaría el desarrollo del prototipo.\n",
+    "**Velocidad de Prototipado y Simplicidad:**  Con Google AI Studio, pueden obtener una clave API en minutos y comenzar a hacer llamadas al modelo multimodal (como Gemini Pro Vision) de inmediato. No necesitan configurar un proyecto completo de Google Cloud, gestionar permisos de IAM (Identidad y Acceso) ni entender conceptos de MLOps. Vertex AI, por el contrario, es una plataforma completa que requiere configuración de proyecto, habilitación de APIs, y una curva de aprendizaje mayor, lo cual retrasaría el desarrollo del prototipo.\n",
     "\n",
-    "Costo (Presupuesto Cero): El presupuesto es el factor decisivo. La API de Gemini ofrece una generosa capa gratuita, ideal para una startup en fase de prototipo. Pueden construir, probar y realizar docenas de demostraciones a inversores sin incurrir en costos. Vertex AI está diseñado para producción y escala empresarial; aunque tiene una capa gratuita, sus costos están asociados a la infraestructura de GCP y están pensados para aplicaciones que ya generan ingresos o tienen financiación.\n",
+    "**Costo (Presupuesto Cero):** El presupuesto es el factor decisivo. La API de Gemini ofrece una generosa capa gratuita, ideal para una startup en fase de prototipo. Pueden construir, probar y realizar docenas de demostraciones a inversores sin incurrir en costos. Vertex AI está diseñado para producción y escala empresarial; aunque tiene una capa gratuita, sus costos están asociados a la infraestructura de GCP y están pensados para aplicaciones que ya generan ingresos o tienen financiación.\n",
     "\n",
-    "Naturaleza de los Datos (No Sensibles): En esta etapa, la startup maneja datos (fotos de plantas) que no son confidenciales ni están regulados. Por lo tanto, las robustas garantías de seguridad empresarial, gobernanza de datos y cumplimiento (como HIPAA) que ofrece Vertex AI (que garantiza que los datos del cliente no se usan para entrenar modelos públicos) son innecesarias y excesivas (overkill) para este MVP. El equipo puede operar perfectamente bajo los términos de servicio estánda\n"
+    "**Naturaleza de los Datos (No Sensibles):** En esta etapa, la startup maneja datos (fotos de plantas) que no son confidenciales ni están regulados. Por lo tanto, las robustas garantías de seguridad empresarial, gobernanza de datos y cumplimiento (como HIPAA) que ofrece Vertex AI (que garantiza que los datos del cliente no se usan para entrenar modelos públicos) son innecesarias y excesivas (overkill) para este MVP. El equipo puede operar perfectamente bajo los términos de servicio estánda\n"
    ]
   },
   {
